# ZJUBinPicking

./: DEVELOPLOG.md  TEAMDEVLOG.md  references
bpmsg/msg/: arm_state.msg
pcd_files/: TWP.STL  curve_pipe.pcd  curve_pipe1136.pcd  curve_trans.pcd  cylinder.pcd  filter_1.pcd  filter_2.pcd  filter_4.pcd  filter_5.pcd  gather.pcd  good.pcd  model_1.pcd  new.pcd  new.ply  newthree.ply  project.pcd  project1637.pcd  project2.pcd  project3.pcd  project479.pcd  real_threepipe1091.pcd  real_threepipe1613.pcd  straight_pipe.pcd  straight_pipe.ply  straight_pipe1078.pcd  three.blend  three.mtl  three.pcd  three.stl  three2.pcd  three2.ply  threeway_pipe.pcd  threeway_pipe2.pcd  threeway_pipe2.ply  threeway_trans2.pcd  twp.ply  twp2.ply  twp837.pcd  twp_2.ply  untitled.ply  (+4 more)
probot_anno_with_gripper_moveit_config/config/: ompl_planning.yaml  probot_anno.srdf
probot_anno_with_gripper_moveit_config/launch/: moveit.rviz
probot_description/urdf/PROBOT_Anno/: dynamixel_arm_hardware.xacro  gripper.xacro  probot_anno_with_gripper.xacro  probot_anno_with_gripper_2.xacro  robotiq_140.urdf.xacro
probot_description/urdf/PROBOT_Anno/sensors/: camera.gazebo.xacro  camera.urdf.xacro
probot_gazebo/launch/probot_anno_with_gripper/: probot_anno_with_gripper_gazebo_world.launch
probot_gazebo/worlds/: for_realworld.world  good.world  model.sdf  side_0.world  stand.world  tableObj.world  tableObj10.world  tableObj10_1.world  tableObj10_2.world  tableObj10_3.world  tableObj10_4.world  tableObj10_4_1.world  tableObj10_4_2.world  tableObj11.world  tableObj11_1.world  tableObj11_2.world  tableObj11_3.world  tableObj12.world  tableObj12_1.world  tableObj13_0.world  tableObj13_1.world  tableObj13_2.world  tableObj13_3.world  tableObj13_4.world  tableObj13_5.world  tableObj3.world  tableObj4.world  tableObj5.world  tableObj6.world  tableObj6_1.world  tableObj6_2.world  tableObj6_3.world  tableObj7.world  tableObj7_1.world  tableObj7_2.world  tableObj7_3.world  tableObj8.world  tableObj8_1.world  tableObj8_2.world  tableObj8_3.world  (+7 more)
probot_grasping/: CMakeLists.txt
probot_grasping/include/probot_grasping/: grasping_demo.h
probot_grasping/launch/: probot_anno_grasping_demo.launch  probot_anno_grasping_demo_real.launch  probot_anno_grasping_demo_sim.launch
probot_grasping/src/: grasping_demo.cpp  grasping_demo_real.cpp  grasping_demo_sim.cpp
probot_vision_pick/probot_ocr/: CMakeLists.txt
probot_vision_pick/probot_vision/: CMakeLists.txt
probot_vision_pick/probot_vision/src/: AdjustColorThreshold.cpp
serial_trans/: CMakeLists.txt  package.xml  serial_commu.launch
serial_trans/src/: actuator.cpp  serial_node.cpp  serial_node.cpp.cp  serial_node.cpp.pos  serial_node.cpp.vec  serial_node_angle.cpp  serial_node_vel.cpp
template_match/: CMakeLists.txt  README.md  package.xml  template_match.launch
template_match/bpmsg/: CMakeLists.txt  package.xml
template_match/bpmsg/msg/: arm_state.msg  pose.msg
template_match/src/: icp.cpp  listen.cpp  main.cpp  output.cpp  produce_model.cpp  template_match.cpp  template_match.hpp
template_match/template_match/: CMakeLists.txt  package.xml  template_match.launch  template_match_real.launch  template_match_real_vision.launch  template_match_sim.launch
template_match/template_match/include/DBSCAN/: DBSCAN.hpp
template_match/template_match/include/template_match/: template_match.hpp
template_match/template_match/src/: DBSCAN.cpp  listen.cpp  output.cpp  produce_model.cpp  template_match copy.cpp  template_match.cpp  template_match.hpp
